--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,9 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
     <title>Base</title>
 </head>
 <body>
@@ -27,12 +28,12 @@
                   Opções
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="{%url 'cadastrar_pessoa' %}">Cadastar Usuário</a></li>
-                  <li><a class="dropdown-item" href="{%url 'cadastrar_empresa' %}">Cadastar Empresa</a></li>
-                  <li><a class="dropdown-item" href="{%url 'cadastrar_vendedor' %}">Cadastar Vendedor</a></li>
-                  <li><a class="dropdown-item" href="{%url 'cadastrar_gerente' %}">Cadastar Gerente</a></li>
+                  <li><a class="dropdown-item" href="{% url 'home' %}">Início</a></li>
+                  <li><a class="dropdown-item" href="{% url 'cadastrar_pessoa' %}">Cadastar Usuário</a></li>
+                  <li><a class="dropdown-item" href="{% url 'cadastrar_empresa' %}">Cadastar Empresa</a></li>
+                  <li><a class="dropdown-item" href="{% url 'cadastrar_vendedor' %}">Cadastar Vendedor</a></li>
+                  <li><a class="dropdown-item" href="{% url 'cadastrar_gerente' %}">Cadastrar Gerente</a></li>
                   <!-- <li><a class="dropdown-item" href="#">Cadastar Produto</a></li> -->
-
                 </ul>
               </li>
             </ul>
@@ -41,35 +42,32 @@
       </nav>
 
       <main>
-          <!-- {% block conteudo %}
-          {% endblock conteudo %} -->
+          {% block conteudo %}
+          {% endblock conteudo %}
       </main>
 
-
-      <footer class="page-footer black">
+      
+      <footer>
         <div class="container">
           <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">Controle de estoque</h5>
-              <p class="grey-text text-lighten-4">Sistema para controlar o estoque da Empresa!</p>
+            <div class="col-md-2">
+              <img src="../static/imagens/spotify.svg" width="142">
             </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Formas de contato</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <div class="col-md-2">
+              <h4>company</h4>
+              <ul class="navbar-nav">
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Empregos</a></li>
+                <li><a href="">Imprensa</a></li>
+                <li><a href="">Novidades</a></li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="footer-copyright">
-          <div class="container">
-          © 2021 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">Mais informações</a>
-          </div>
-        </div>
+            
+            
+         
+        
       </footer>
+
+
 </body>
 </html>
