--- a/static/estilo.css
+++ b/static/estilo.css
@@ -19,7 +19,7 @@ footer{
     justify-items: center;
     position: relative;
     color:aliceblue;
-    
+    position: relative;
     display: flex;
     flex-direction: column:
     
