--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load bootstrap4 %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -10,8 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-    <title>Base</title>
+    <script src="{% static 'jquery.mask.js' %}"></script>
+    <title>Controle de estoque</title>
 </head>
 <body>
     
@@ -33,6 +34,11 @@
                   <li><a class="dropdown-item" href="{% url 'cadastrar_empresa' %}">Cadastar Empresa</a></li>
                   <li><a class="dropdown-item" href="{% url 'cadastrar_vendedor' %}">Cadastar Vendedor</a></li>
                   <li><a class="dropdown-item" href="{% url 'cadastrar_gerente' %}">Cadastrar Gerente</a></li>
+                  <li><a class="dropdown-item" href="{% url 'cadastrar_gerente' %}">Gerentes cadastrados</a></li>
+                  <li><a class="dropdown-item" href="{% url 'listar_pessoas' %}">Usuários cadastrados</a></li>
+                  <li><a class="dropdown-item" href="{% url 'listar_vendedor' %}">Vendedores cadastrados</a></li>
+                  <li><a class="dropdown-item" href="{% url 'listar_empresas' %}">Empresas cadastradas</a></li>
+
                   <!-- <li><a class="dropdown-item" href="#">Cadastar Produto</a></li> -->
                 </ul>
               </li>
