--- a/templates/cadastarusuario.html
+++ b/templates/cadastarusuario.html
@@ -1,49 +1,64 @@
 {% extends 'base.html' %}
-
+{% load bootstrap4 %}
 {% block conteudo %}
 <script>
-    $('document').ready(function() {
-        document.getElementById("id_nascimetno").setAttribute("type", "date");
+    $('document').ready(function() {        
         $("#id_nascimento").attr("type", "date");
-        // document.getElementById("id_data_inicio").setAttribute("class", "red-text");
-        // $("#id_data_termino").addClass("text-green");
-    })
+        // $("#id_nascimento").attr("type", "date");
+        // $("#id_nascimento").attr("type", "date");
+        $("#id_telefone_celular").mask("(99) 9 9999-9999");
+        $("#id_telefone").mask("9999-9999");
+        $("#id_cpf").mask("999.999.999-99");
+})
+       
 </script>
 <main class="container">
-    <h1>Cadastrar Pessoa</h1>
+    <h1>CADASTRAR USUÁRIO</h1>
+    <br>
     <form method="POST">
         {% csrf_token %}
-        <div>
-            <label placeholder="name@examplo.com">Nome:</label> {{form.nome}}
-        </div>
-        <br>
 
-        <div>
-            <label>Email</label> {{form.email}}
-        </div>
-        <div>
-
-            <label>Data de nascimento:</label> {{form.nascimento}}
-        </div>
-
-
-        <br>
-        <div>
-            <label>CPF</label> {{form.cpf}}
-        </div>
-        <div>
-            <input class="button" type="submit" value="Continue">
-        </div>
-    </form>
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">Submit</button>
+        {% endbuttons %}
+        </form>
     <br>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Endereço de email</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@examplo.com">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Examplo area de texto</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
+    
+    <script>
+        $("#id_cep").focusout(function(){
+            //Início do Comando AJAX
+            $.ajax({
+                //O campo URL diz o caminho de onde virá os dados
+                //É importante concatenar o valor digitado no CEP
+                url: 'https://viacep.com.br/ws/'+$(this).val().replace(".","").replace("-","")+'/json/unicode/',
+                //Aqui você deve preencher o tipo de dados que será lido,
+                //no caso, estamos lendo JSON.
+                dataType: 'json',
+                //SUCESS é referente a função que será executada caso
+                //ele consiga ler a fonte de dados com sucesso.
+                //O parâmetro dentro da função se refere ao nome da variável
+                //que você vai dar para ler esse objeto.
+                success: function(resposta){
+                    //Agora basta definir os valores que você deseja preencher
+                    //automaticamente nos campos acima.
+                    if (resposta.erro) {
+                        $("#id_cep").removeClass('valid');
+                        $("#id_cep").addClass('invalid');
+                    }
+                    $("#id_logradouro").val(resposta.logradouro);                    
+                    $("#id_bairro").val(resposta.bairro);
+                    $("#id_cidade").val(resposta.localidade);
+                    $("#id_estado").val(resposta.uf);
+                    
+                    //Vamos incluir para que o Número seja focado automaticamente
+                    //melhorando a experiência do usuário
+                    
+                    $("#id_numero").focus();
+                }
+            });
+        });
+    </script>
 
 {% endblock %}
