--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,13 @@
                   <li><a class="dropdown-item" href="{% url 'listar_pessoas' %}">Usuários cadastrados</a></li>
                   <li><a class="dropdown-item" href="{% url 'listar_vendedor' %}">Vendedores cadastrados</a></li>
                   <li><a class="dropdown-item" href="{% url 'listar_empresas' %}">Empresas cadastradas</a></li>
+                  <li><a class="dropdown-item" href="{%url 'cadastrar_produto' %}">Cadastar Produto</a></li>
+                  <li><a class="dropdown-item" href="{%url 'produto_estoque' %}">Adicionar produto no estoque</a></li>
+                  <li><a class="dropdown-item" href="{%url 'listar_produto' %}">Produtos no estoque</a></li>
+                  <li><a class="dropdown-item" href="{%url 'produtos_cadastrados' %}">Produtos Cadastrados</a></li>
 
-                  <!-- <li><a class="dropdown-item" href="#">Cadastar Produto</a></li> -->
+
+
                 </ul>
               </li>
             </ul>
