Adicionando novas funcionalidades

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                   <li><a class="dropdown-item" href="{% url 'listar_empresas' %}">Empresas cadastradas</a></li>
                   <li><a class="dropdown-item" href="{%url 'cadastrar_produto' %}">Cadastar Produto</a></li>
                   <li><a class="dropdown-item" href="{%url 'produto_estoque' %}">Adicionar produto no estoque</a></li>
-                  <li><a class="dropdown-item" href="{%url 'listar_produto' %}">Produtos no estoque</a></li>
+                  <li><a class="dropdown-item" href="{%url 'listar_produto' %}">Estoque</a></li>
                   <li><a class="dropdown-item" href="{%url 'produtos_cadastrados' %}">Produtos Cadastrados</a></li>
 
 
