--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">RELATÓRIO DAS MOVIMENTAÇÕES</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Relatório das movimentações, listando data, gerente, tipo de movimentação e mais.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -37,13 +37,16 @@
             <div class="col-sm-6">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <h5 class="card-title">MOVIMENTAR PRODUTOS</h5>
+                  <p class="card-text">Venda e compra de produtos.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
             </div>
           </div>
+          
+          
+          
           <h2>ARRRUMARRR O FOOOTER</h2>
     </main>
 
