--- a/templates/produtoestoque.html
+++ b/templates/produtoestoque.html
@@ -5,7 +5,7 @@
 
 <script>
     $('document').ready(function() {        
-        $("#id_data_de_validade").mask(" 99/99/9999");
+        $("#id_data_de_validade").attr("type", "date");
     })
 </script>
 
