--- a/templates/cadastarusuario.html
+++ b/templates/cadastarusuario.html
@@ -20,7 +20,7 @@
 
         {% bootstrap_form form %}
         {% buttons %}
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Concluir</button>
         {% endbuttons %}
         </form>
     <br>
