--- a/templates/cadastrargerente.html
+++ b/templates/cadastrargerente.html
@@ -21,12 +21,21 @@
 
         {% bootstrap_form form %}
         {% buttons %}
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Concluir</button>
         {% endbuttons %}
         </form>
     <br>
-
-    
+    <br>
+    <br>
+    <div class="alert alert-danger" role="alert">
+        Todos os gerentes aqui cadastrados serão responsáveis por controlar a movimentação do sistema! 
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+   
     <script>
         $("#id_cep").focusout(function(){
             //Início do Comando AJAX
