--- a/templates/cadastrarvendedor.html
+++ b/templates/cadastrarvendedor.html
@@ -20,13 +20,20 @@
 
         {% bootstrap_form form %}
         {% buttons %}
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Concluir</button>
         {% endbuttons %}
         </form>
     <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+{% endblock %}
 
-    
-    <!-- <script>
+<!-- <script>
         $("#id_cep").focusout(function(){
             //Início do Comando AJAX
             $.ajax({
@@ -60,5 +67,3 @@
             });
         });
     </script> -->
-
-{% endblock %}
