--- a/templates/index.html
+++ b/templates/index.html
@@ -39,15 +39,11 @@
                 <div class="card-body">
                   <h5 class="card-title">MOVIMENTAR PRODUTOS</h5>
                   <p class="card-text">Venda e compra de produtos.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="{%url 'realizar_transacao' %}" class="btn btn-primary">COMPRAR OU VENDER PRODUTOS</a>
                 </div>
               </div>
             </div>
           </div>
-          
-          
-          
-          <h2>ARRRUMARRR O FOOOTER</h2>
-    </main>
+      </main>
 
 {% endblock %}
