--- a/templates/listar_produto.html
+++ b/templates/listar_produto.html
@@ -30,5 +30,8 @@
             <button class="btn btn-primary" type="button">CADASTRAR PRODUTO</button>
         </a>
         {% endif%} 
+        <div>
+          <a href="{%url 'realizar_transacao' %}" class="btn btn-primary">Comprar ou vender produto</a>
+      </div>
 </main>
 {% endblock %}
