--- a/templates/transacao.html
+++ b/templates/transacao.html
@@ -2,9 +2,9 @@
 {% load bootstrap4 %}
 {% block conteudo %}
 
-</script>
+
 <main class="container">
-    <h1>CADASTRAR PRODUTO</h1>
+    <h1>COMPRA E VENDA DE PRODUTO</h1>
     <br>
     <form method="POST">
         {% csrf_token %}
