--- a/templates/produtoestoque.html
+++ b/templates/produtoestoque.html
@@ -18,14 +18,15 @@
 
         {% bootstrap_form form %}
         {% buttons %}
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Concluir</button>
         {% endbuttons %}
         </form>
         <br>
         <br>
         <br>
         <div class="alert alert-dark" role="alert">
-            Todos os produtos aqui cadastrados sera adicionado ou retirado do estoque.
+            Todos os produtos aqui cadastrados sera adicionado no estoque.
           </div>
+          
     <br>
     {% endblock %}
