--- a/templates/produtos_vencidos.html
+++ b/templates/produtos_vencidos.html
@@ -4,7 +4,7 @@
 <main class="container">
     <h1>PRODUTOS VENCIDOS</h1>
     <div class="alert alert-danger" role="alert">
-        Todos os produtos aqui listados estão vencidos ou perto de vencer!
+        Todos os produtos aqui listados estão vencidos!
       </div>
     {% if listProdutoEstoque %}
     <table class="table table-dark table-striped">
