--- a/templates/transacao.html
+++ b/templates/transacao.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block conteudo %}
-
+<script>
+  $(document).ready(function(){   
+      $("#addProduto").click(function() {                
+          var clone = $(".Table .Row").first().clone() 
+          clone.appendTo(".Table");          
+      });
+  });
+</script>
 
 <main class="container">
     <h1>COMPRA E VENDA DE PRODUTO</h1>
@@ -10,6 +17,25 @@
         {% csrf_token %}
 
         {% bootstrap_form form %}
+        <div class="Table">
+          <div class = "Row">
+            <label for="id_empresa">Produtos</label>
+            <select class="form-control" name="Produto[]" aria-label="Default select example">
+              <option selected>Selecione o produto</option>
+              {% for x in listProdutos %}
+                <option value="{{x.id}}">{{x.produto.nome}} -Quantidade {{x.quantidade}}</option>
+              {% endfor %}
+            </select>
+            <br>
+          <div class="input-group input-group-sm mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-sm">Quantidade</span>
+            <input type="text" class="form-control" name = "Qtd[]" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+          </div>
+        </div>
+      </div>
+      <a type="" class="btn btn-primary waves-effect blue-grey darken-4" href="javascript:" id="addProduto">      
+        <span class="font-bold">Adicionar outro produto!</span>
+    </a>
         {% buttons %}
             <button type="submit" class="btn btn-primary">Concluir</button>
         {% endbuttons %}
