--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,9 @@
                   <li><a class="dropdown-item" href="{%url 'produto_estoque' %}">Adicionar produto no estoque</a></li>
                   <li><a class="dropdown-item" href="{%url 'listar_produto' %}">Estoque</a></li>
                   <li><a class="dropdown-item" href="{%url 'realizar_transacao' %}">Compra e venda de produto</a></li>
-                  <li><a class="dropdown-item" href="{%url 'produtos_vencidos' %}">Produtos vencidos</a></li>
+                  <li><a class="dropdown-item" href="{%url 'compra_de_produtos' %}" >Compra de produto</a></li>
+                  <li><a class="dropdown-item" href="{%url 'venda_de_produtos' %}" >Venda de produto</a></li>
+
                 </ul>
               </li>
             </ul>
