--- a/templates/comprar.html
+++ b/templates/comprar.html
@@ -11,7 +11,7 @@
 </script>
 
 <main class="container">
-    <h1>COMPRA E VENDA DE PRODUTO</h1>
+    <h1>COMPRA DE PRODUTOS</h1>
     <br>
     <form method="POST">
         {% csrf_token %}
@@ -34,7 +34,7 @@
         </div>
       </div>
       <a type="" class="btn btn-primary waves-effect blue-grey darken-4" href="javascript:" id="addProduto">      
-        <span class="font-bold">Cadastrar outro produto</span>
+        <span class="font-bold">Comprar outro produto</span>
         </a>
         <br>
         <br>
@@ -44,4 +44,5 @@
         {% endbuttons %}
         </form>
     <br>
+    <p>AARRRRRRRRUUUUUUUUMMMMMMMMMMMMMAAAAAAAAAAARRRRRR</p>
     {% endblock %}
