--- a/templates/listar_produto.html
+++ b/templates/listar_produto.html
@@ -3,6 +3,15 @@
 
 <main class="container">
     <h1>ESTOQUE DE PRODUTOS</h1>
+    <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
+      <div class="card-header">AVISO</div>
+      <div class="card-body">
+        <h5 class="card-title">DATA DE VENCIMENTO</h5>
+        <p class="card-text">Produtos que estão com a linha vermelha é que estão vencidos.</p>
+        <p class="card-text">Produtos que estão com a linha amarela é que estão perto de vencer.</p>
+        <p class="card-text">Produtos que estão com a linha verde é que estão longe da data de vencimento.</p>
+      </div>
+    </div>
     {% if listProdutoEstoque %}
     <table class="table table-dark">
         <thead>
@@ -38,8 +47,13 @@
             <button class="btn btn-primary" type="button">CADASTRAR PRODUTO</button>
         </a>
         {% endif%} 
+        <br>
+        <br>
         <div>
           <a href="{%url 'realizar_transacao' %}" class="btn btn-primary">Comprar ou vender produto</a>
       </div>
 </main>
+<br>
+<br>
+
 {% endblock %}
