adicionando mais funcionalidades

--- a/templates/cadastrar_produto.html
+++ b/templates/cadastrar_produto.html
@@ -15,4 +15,8 @@
         {% endbuttons %}
         </form>
     <br>
+    <div>
+        <a href="{%url 'compra_de_produtos' %}" class="btn btn-primary">Comprar produto</a>
+    </div>
+    <br>
     {% endblock %}
