--- a/templates/listaempresa.html
+++ b/templates/listaempresa.html
@@ -20,7 +20,7 @@
             
             <td>{{aux.nome}}</td>
             <td>{{aux.email}}</td>
-            <td>{{aux.CNPJ}}</td>
+            <td>{{aux.cnpj}}</td>
             <td>{{aux.telefone}}</td>
             <td>{{aux.cep}}</td>
           </tr>
