--- a/templates/vender.html
+++ b/templates/vender.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <a type="" class="btn btn-primary waves-effect blue-grey darken-4" href="javascript:" id="addProduto">      
-        <span class="font-bold">Comprar outro produto</span>
+        <span class="font-bold">Vender outro produto</span>
         </a>
         <br>
         <br>
@@ -44,5 +44,5 @@
         {% endbuttons %}
         </form>
     <br>
-    <p>AARRRRRRRRUUUUUUUUMMMMMMMMMMMMMAAAAAAAAAAARRRRRR VENDAAAAAAAAAA</p>
+   
     {% endblock %}
