--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Controle de estoque</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Controle de estoque</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -43,7 +43,6 @@
                   <li><a class="dropdown-item" href="{%url 'produtos_cadastrados' %}">Produtos Cadastrados</a></li>
                   <li><a class="dropdown-item" href="{%url 'produto_estoque' %}">Adicionar produto no estoque</a></li>
                   <li><a class="dropdown-item" href="{%url 'listar_produto' %}">Estoque</a></li>
-                  <li><a class="dropdown-item" href="{%url 'realizar_transacao' %}">Compra e venda de produto</a></li>
                   <li><a class="dropdown-item" href="{%url 'compra_de_produtos' %}" >Compra de produto</a></li>
                   <li><a class="dropdown-item" href="{%url 'venda_de_produtos' %}" >Venda de produto</a></li>
 
