--- a/templates/listavendedores.html
+++ b/templates/listavendedores.html
@@ -2,7 +2,7 @@
 {% block conteudo %}
 
 <main class="container">
-    <h1>VENDEDORES CADASTRADAS</h1>
+    <h1>VENDEDORES CADASTRADOS</h1>
     {% if listvendedor %}
     <table class="table table-dark table-striped">
         <thead>
