adicionando mais funcionalidades

--- a/templates/cadastarusuario.html
+++ b/templates/cadastarusuario.html
@@ -9,6 +9,7 @@
         $("#id_telefone_celular").mask("(99) 9 9999-9999");
         $("#id_telefone").mask("9999-9999");
         $("#id_cpf").mask("999.999.999-99");
+        $("#id_cep").mask("00000-000");
 })
        
 </script>
