--- a/templates/cadastrarempresa.html
+++ b/templates/cadastrarempresa.html
@@ -7,7 +7,8 @@
         // $("#id_nascimento").attr("type", "date");
         // $("#id_nascimento").attr("type", "date");
         $("#id_telefone").mask("9999-9999");
-        $("#id_CNPJ").mask("00.000.000/0000-00");
+        $("#id_cnpj").mask('00.000.000/0000-00');
+        $("#id_cep").mask("00000-000");
 })
 </script>
 <main class="container">
