adicionando mais funcionalidades

--- a/templates/listar_produto.html
+++ b/templates/listar_produto.html
@@ -2,7 +2,15 @@
 {% block conteudo %}
 
 <main class="container">
+ 
     <h1>ESTOQUE</h1>
+
+    <div class="input-group">
+      <input type="search" class="form-control rounded" placeholder="pesquisar" aria-label="Search"
+        aria-describedby="search-addon"/>
+      <button type="button" class="btn btn-outline-primary">Pesquisar</button>
+    </div>
+    <br>
     <div class="card text-dark bg-info mb-3" style="max-width: 18rem;">
       <div class="card-header">AVISO</div>
       <div class="card-body">
