--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                   <li><a class="dropdown-item" href="{%url 'listar_produto' %}">Estoque</a></li>
                   <li><a class="dropdown-item" href="{%url 'compra_de_produtos' %}" >Compra de produto</a></li>
                   <li><a class="dropdown-item" href="{%url 'venda_de_produtos' %}" >Venda de produto</a></li>
-
+                  <li><a class="dropdown-item" href="{%url 'relatorio_movimentacoes' %}" >Relatório das movimentações</a></li>
                 </ul>
               </li>
             </ul>
