--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                 <div class="card-body">
                   <h5 class="card-title">RELATÓRIO DAS MOVIMENTAÇÕES</h5>
                   <p class="card-text">Relatório das movimentações, listando data, gerente, tipo de movimentação e mais.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="{%url 'relatorio_movimentacoes' %}" class="btn btn-primary">RELATÓRIO</a>
                 </div>
               </div>
             </div>
